--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -42,5 +42,13 @@ http {
 			fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
 			fastcgi_param PATH_INFO $fastcgi_path_info;
 		}
+
+		location /adminer {
+			fastcgi_split_path_info ^(/adminer)(/.+)$;
+			fastcgi_pass adminer:9000;
+			fastcgi_index index.php;
+			include fastcgi_params;
+			fastcgi_param SCRIPT_FILENAME /var/www/html/index.php;
+    	}
 	}
 }
