--- a/srcs/requirements/bonus/redis/conf/redis.conf
+++ b/srcs/requirements/bonus/redis/conf/redis.conf
@@ -3,7 +3,7 @@ bind 0.0.0.0
 protected-mode no
 maxmemory 256mb
 maxmemory-policy allkeys-lru
-timeout 0
-tcp-keepalive 300
-appendonly no
-save ""
+timeout 300
+tcp-keepalive 60
+daemonize no
+appendonly yes
