--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,54 +1,79 @@
-events {
-	worker_connections 1024;
-}
-
 http {
-	include		/etc/nginx/mime.types;
-	default_type	application/octet-stream;
-	# Logging configuration
+    include         /etc/nginx/mime.types;
+    default_type    application/octet-stream;
+
+    # Add these timeouts
+    fastcgi_connect_timeout 300;
+    fastcgi_send_timeout 300;
+    fastcgi_read_timeout 300;
+    
+    # Logging configuration
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
 
     access_log  /var/log/nginx/access.log  main;
     error_log   /var/log/nginx/error.log;
-	
-	server {
-		listen 80;
-		server_name mrios-he.42.fr;
-		return 301 https://$host$request_uri;
-	}	
+    
+    server {
+        listen 80;
+        server_name mrios-he.42.fr;
+        return 301 https://$host$request_uri;
+    }   
 
-	server {
-		listen 443 ssl;
-		server_name mrios-he.42.fr;
+    server {
+        listen 443 ssl;
+        server_name mrios-he.42.fr;
 
-		ssl_protocols TLSv1.2 TLSv1.3;
-		ssl_certificate /etc/nginx/ssl/nginx.crt;
-		ssl_certificate_key /etc/nginx/ssl/nginx.key;
-		
-		root /var/www/html;
-		index index.php;
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_certificate /etc/nginx/ssl/nginx.crt;
+        ssl_certificate_key /etc/nginx/ssl/nginx.key;
+        
+        root /var/www/html;
+        index index.php;
 
-		location / {
-			try_files $uri $uri/ /index.php?$args;
-		}
+        # Add these lines for better PHP handling
+        location = /favicon.ico {
+            log_not_found off;
+            access_log off;
+        }
 
-		location ~ \.php$ {
-			fastcgi_split_path_info ^(.+\.php)(/.+)$;
-			fastcgi_pass wordpress:9000;
-			fastcgi_index index.php;
-			include fastcgi_params;
-			fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-			fastcgi_param PATH_INFO $fastcgi_path_info;
-		}
+        location = /robots.txt {
+            allow all;
+            log_not_found off;
+            access_log off;
+        }
 
-		location /adminer {
-			fastcgi_split_path_info ^(/adminer)(/.+)$;
-			fastcgi_pass adminer:9000;
-			fastcgi_index index.php;
-			include fastcgi_params;
-			fastcgi_param SCRIPT_FILENAME /var/www/html/index.php;
-    	}
-	}
+        location / {
+            try_files $uri $uri/ /index.php?$args;
+        }
+
+        location ~ \.php$ {
+            fastcgi_split_path_info ^(.+\.php)(/.+)$;
+            fastcgi_pass wordpress:9000;
+            fastcgi_index index.php;
+            include fastcgi_params;
+            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+            fastcgi_param PATH_INFO $fastcgi_path_info;
+            # Add these lines
+            fastcgi_intercept_errors on;
+            fastcgi_buffer_size 128k;
+            fastcgi_buffers 4 256k;
+            fastcgi_busy_buffers_size 256k;
+        }
+
+        # Fix adminer location block
+        location ~ ^/adminer(/.*$|$) {
+            fastcgi_pass adminer:9000;
+            fastcgi_index index.php;
+            include fastcgi_params;
+            fastcgi_param SCRIPT_FILENAME /var/www/html/index.php;
+            fastcgi_param PATH_INFO $fastcgi_path_info;
+        }
+
+        # Add this to handle WordPress cache
+        location ~ /\. {
+            deny all;
+        }
+    }
 }
