--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -86,6 +86,8 @@ services:
     volumes:
       - ./requirements/bonus/redis/conf/redis.conf:/usr/local/etc/redis/redis.conf
     restart: always
+    cap_add:
+      - SYS_ADMIN
     deploy:
       resources:
         limits:
