--- a/srcs/requirements/bonus/redis/conf/redis.conf
+++ b/srcs/requirements/bonus/redis/conf/redis.conf
@@ -1,9 +1,34 @@
+# Network
 port 6379
 bind 0.0.0.0
 protected-mode no
+tcp-keepalive 60
+timeout 300
+
+# Memory Management
 maxmemory 256mb
 maxmemory-policy allkeys-lru
-timeout 300
-tcp-keepalive 60
-daemonize no
+# Recommended for Redis performance
+vm.overcommit_memory 1
+
+# Persistence
 appendonly yes
+appendfsync everysec
+no-appendfsync-on-rewrite yes
+auto-aof-rewrite-percentage 100
+auto-aof-rewrite-min-size 64mb
+
+# General
+daemonize no
+supervised no
+loglevel notice
+databases 16
+
+# Snapshotting
+save 900 1
+save 300 10
+save 60 10000
+
+# Security
+rename-command FLUSHDB ""
+rename-command FLUSHALL ""
