--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -17,7 +17,24 @@ http {
 		listen 80;
 		server_name mrios-he.42.fr;
 		return 301 https://$host$request_uri;
-	}	
+	}
+
+	server {
+		listen 443 ssl;
+		server_name hugo.${DOMAIN_NAME};
+
+		ssl_certificate /etc/nginx/ssl/nginx.crt;
+		ssl_certificate_key /etc/nginx/ssl/nginx.key;
+		ssl_protocols TLSv1.2 TLSv1.3;
+
+		location / {
+			proxy_pass http://hugo:1313;
+			proxy_set_header Host $host;
+			proxy_set_header X-Real-IP $remote_addr;
+			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+			proxy_set_header X-Forwarded-Proto $scheme;
+		}
+	}
 
 	server {
 		listen 443 ssl;
