--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -155,6 +155,16 @@ services:
     restart: always
     ports:
       - "1313:1313"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:1313"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+    deploy:
+      resources:
+        limits:
+          memory: 256M
+          cpus: '0.3'
 
 volumes:
   wordpress_data:
