--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -13,6 +13,11 @@ http {
     access_log  /var/log/nginx/access.log  main;
     error_log   /var/log/nginx/error.log;
 	
+	# Upstream definition for Hugo
+    upstream hugo_backend {
+        server hugo:1313;
+    }
+
 	server {
 		listen 80;
 		server_name mrios-he.42.fr;
@@ -33,6 +38,10 @@ http {
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 			proxy_set_header X-Forwarded-Proto $scheme;
+
+			proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
 		}
 	}
 
