--- a/srcs/requirements/bonus/hugo/Dockerfile
+++ b/srcs/requirements/bonus/hugo/Dockerfile
@@ -1,9 +1,13 @@
 FROM debian:bullseye-slim
 
 RUN apt-get update && apt-get install -y \
-    hugo \
+    curl \
     git \
     && rm -rf /var/lib/apt/lists/*
+
+RUN curl -L https://github.com/gohugoio/hugo/releases/download/v0.121.1/hugo_0.121.1_linux-amd64.deb -o hugo.deb \
+    && dpkg -i hugo.deb \
+    && rm hugo.deb
 
 WORKDIR /var/www/hugo
 
